--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -87,7 +87,7 @@
                     android:layout_height="@dimen/custom_size150"
                     android:background="@drawable/button_bg_new"
                     android:fontFamily="@font/roboto_bold"
-                    android:text="Income\n$18500"
+                    android:text=""
                     android:textAllCaps="false"
                     android:layout_weight="50"
                     android:textColor="@color/white"
@@ -101,7 +101,7 @@
                         android:layout_weight="50"
                         android:background="@drawable/button_bg_new"
                         android:fontFamily="@font/roboto_bold"
-                        android:text="Expenses\n$12500"
+                        android:text=""
                         android:layout_margin="5dp"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
