--- a/app/src/main/res/layout/item_goaladapter.xml
+++ b/app/src/main/res/layout/item_goaladapter.xml
@@ -35,7 +35,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/roboto_regular"
-        android:text='$100'
+        android:text=''
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:layout_alignParentRight="true"
