--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,6 +54,7 @@
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
+            android:layout_alignParentRight="true"
             android:layout_toLeftOf="@+id/profile"
             android:layout_below="@+id/logout"
             android:src="@drawable/ic_notification" />
@@ -62,11 +63,12 @@
             android:id="@+id/profile"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="5dp"
             android:layout_below="@+id/logout"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="13dp"
+            android:visibility="gone"
             android:src="@drawable/ic_acc" />
 
 
